k8s/argo-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-route
  namespace: argocd
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`argo.local`)
    kind: Rule
    services:
    - name: argocd-server
      port: 80
