k8s/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mi-app-route
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`app.local`)
    kind: Rule
    services:
    - name: mi-app-service
      port: 80
